# yocto-bsp-a53-project

./: .gitignore  README.md
doc/: 01. Yocto 빌드 환경 구성 (WSL2 저장소 이전)  01. Yocto 빌드 환경 구성 (WSL2 저장소 이전).md  02. YOCTO 필수 패키지 설치  02. Yocto 필수 패키지 설치.md  02.Yocto_필수패키지설치.md  03. Yocto 브랜치 선정.md  03. yocto 브랜치 선정  03. yocto 브랜치 선정.md  04. Yocto 아키텍처.md  04.Yocto아키텍처.md  05.Build방법  05.meta-custom-a53 레이어 만들기.md  05.meta-custom-a53레이어만들기.md  06. Build방법.md  06.Build방법.md  07.sdk생성.md  08. OpenSSL.md  09.TCP_UDP_소켓통신.md  10. 프로그램_Build.md  11. 네트워크_명령어.md  12.리눅스_구조요약.md  13. 디바이스트리수정_커널최적화.md  13.디바이스트리수정_커널최적화.md  14.boot_flow.md  15.U-Boot_파라미터.md  16.driver_추가.md  dmesg_After.txt  dmesg_Before.txt  dmesg_driver_add.txt  kernel_warning.txt  sysInit_vs_systemd.md
meta-custom-a53/: README
meta-custom-a53/conf/: layer.conf  layer.conf.bak
meta-custom-a53/conf/distro/: custom-a53.conf
meta-custom-a53/conf/machine/: custom-a53-6.12.conf  custom-a53-6.6.conf
meta-custom-a53/recipes-app/hello/: hello.bb
meta-custom-a53/recipes-core/images/: a53-image.bb
meta-custom-a53/recipes-core/systemd/: systemd_%.bbappend
meta-custom-a53/recipes-kernel/linux/: linux-raspberrypi_%.bbappend
program/: .gitignore  CMakeLists.txt
program/include/: AES256-CBC.h  sha256.h  tcp.h
program/src/openssl/: AES256-CBC_TEST.c  AES256_CBC_TEST  sha256_TEST  sha256_TEST.c
program/src/socket/tcp/: tcpClient  tcpClient.c  tcpClientThread  tcpClientThread.c  tcpServer  tcpServer.c  tcpServerThread  tcpServerThread.c
program/src/socket/udp/: udpClient  udpClient.c  udpServer  udpServer.c
(+9 files in other folders)
